ft(user login): add user login route

--- a/.env-example
+++ b/.env-example
@@ -4,4 +4,6 @@
     DATABASE_PASSWORD=
     JWT_SECRET=
     JWT_ISSUER=
-  
+    TEST_DATABASE=
+    TEST_DATABASE_USER=
+    TEST_DATABASE_PASSWORD=
