feat(social-auth): implement social auth
- refactor the codebase to have es6 imports
- add a logger to the codebase
- resolve conflicts
- add passport to the codebase
- code refactor
- add input validation
- remove all database level validations
- add logic for social signup
- add pull request template

--- a/.env-example
+++ b/.env-example
@@ -1,9 +1,10 @@
-  
-    DATABASE=
-    DATABASE_USER=
-    DATABASE_PASSWORD=
-    JWT_SECRET=
-    JWT_ISSUER=
-    TEST_DATABASE=
-    TEST_DATABASE_USER=
-    TEST_DATABASE_PASSWORD=
+DATABASE=
+DATABASE_USER=
+DATABASE_PASSWORD=
+DATABASE_PORT=
+DATABASE_HOST=
+JWT_SECRET=
+JWT_ISSUER=
+
+TEST_DB_URL=
+PROD_DB_URL=
