--- a/.babelrc
+++ b/.babelrc
@@ -3,6 +3,15 @@
     "@babel/preset-env"
   ],
   "plugins": [
-    "@babel/plugin-proposal-class-properties"
-  ]
+    "@babel/plugin-proposal-class-properties",
+    "@babel/plugin-transform-runtime"
+  ],
+  "env": {
+    "test": {
+      "plugins": [
+        "istanbul",
+        "@babel/plugin-proposal-class-properties"
+      ]
+    }
+  }
 }
