--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "NODE_ENV=dev nodemon --exec babel-node app.js",
+    "start": "nodemon --exec babel-node server/index.js",
     "test": "NODE_ENV=test"
   },
   "author": "",
@@ -12,11 +12,14 @@
   "dependencies": {
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "express-promise-router": "^3.0.3",
+    "helmet": "^3.20.0",
     "jsonwebtoken": "^8.5.1",
+    "morgan": "^1.9.1",
     "pg": "^7.11.0",
     "sequelize": "^5.10.2"
   },
