--- a/package.json
+++ b/package.json
@@ -20,6 +20,11 @@
     "helmet": "^3.20.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
+    "passport": "^0.4.0",
+    "passport-facebook-token": "^3.3.0",
+    "passport-google-oauth": "^2.0.0",
+    "passport-google-plus-token": "^2.1.0",
+    "passport-linkedin-oauth2": "^2.0.0",
     "pg": "^7.11.0",
     "sequelize": "^5.10.2"
   },
