--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "express-promise-router": "^3.0.3",
+    "express-validator": "^6.1.1",
     "helmet": "^3.20.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
@@ -25,6 +26,7 @@
     "passport-google-oauth": "^2.0.0",
     "passport-google-plus-token": "^2.1.0",
     "passport-linkedin-oauth2": "^2.0.0",
+    "passport-twitter-token": "^1.3.0",
     "pg": "^7.11.0",
     "sequelize": "^5.10.2"
   },
