--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "NODE_ENV=dev nodemon --exec babel-node app.js",
-    "test": "NODE_ENV=test"
+    "start": "NODE_ENV=production  npx migrate  && node babel-node app.js",
+    "dev": "NODE_ENV=dev nodemon --exec babel-node app.js",
+    "migrate": "node_modules/.bin/sequelize db:migrate",
+    "test": "NODE_ENV=test",
+    "sequelize": "dotenv sequelize"
   },
   "author": "",
   "license": "ISC",
@@ -18,7 +21,8 @@
     "express-promise-router": "^3.0.3",
     "jsonwebtoken": "^8.5.1",
     "pg": "^7.11.0",
-    "sequelize": "^5.10.2"
+    "sequelize": "^5.10.2",
+    "sequelize-cli": "^5.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
