--- a/.babelrc
+++ b/.babelrc
@@ -3,7 +3,15 @@
     "@babel/preset-env"
   ],
   "plugins": [
-    "@babel/plugin-proposal-class-properties"
-  ],
-  "compact" : false
+    "@babel/plugin-proposal-class-properties", 
+    "@babel/transform-runtime"
+],
+"env": {
+  "test": {
+    "plugins": [
+      "@babel/plugin-proposal-class-properties",
+      "@babel/transform-runtime"
+    ]
+  }
+}
 }
