--- a/.env-example
+++ b/.env-example
@@ -3,7 +3,10 @@
     DATABASE_USER=
     DATABASE_PASSWORD=
     JWT_SECRET=
-    JWT_ISSUER=
+    JWT_ISSUER=ekalaamu
+    SENDGRID_API_KEY=
+    MAIL_RETURN_URL=
+    AUTH_EMAIL=
     TEST_DATABASE=
     TEST_DATABASE_USER=
     TEST_DATABASE_PASSWORD=
