--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "node ./build/app.js",
     "dev": "NODE_ENV=dev nodemon --exec babel-node ./src/app.js",
     "migrate": "node_modules/.bin/sequelize db:migrate",
     "clean": "rm -rf build && mkdir build",
     "build-babel": "babel -d ./build ./src -s && babel -d ./build/config ./config -s",
     "build": "npm run clean && npm run build-babel",
-    "test": "NODE_ENV=test",
-    "sequelize": "dotenv sequelize"
+    "sequelize": "dotenv sequelize",
+    "start": "NODE_ENV=dev nodemon --exec babel-node ./src/app.js",
+    "test": "NODE_ENV=test nyc --reporter=lcov mocha --require @babel/register --exit"
   },
   "author": "",
   "license": "ISC",
@@ -22,7 +22,9 @@
     "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/preset-env": "^7.6.2",
     "babel-node": "0.0.1-security",
-    "bcrypt": "^3.0.6",
+    "@babel/runtime": "^7.6.2",
+    "@sendgrid/mail": "^6.4.0",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
@@ -37,6 +39,16 @@
     "sequelize-cli": "^5.5.1"
   },
   "devDependencies": {
-    "nodemon": "^1.19.1"
+    "@babel/cli": "^7.6.2",
+    "@babel/core": "^7.6.2",
+    "@babel/node": "^7.5.5",
+    "@babel/plugin-transform-runtime": "^7.6.2",
+    "@babel/preset-env": "^7.5.5",
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
+    "mocha": "^6.2.1",
+    "nodemon": "^1.19.1",
+    "nyc": "^14.1.1",
+    "sinon": "^7.5.0"
   }
 }
