--- a/package.json
+++ b/package.json
@@ -31,11 +31,11 @@
     "express": "^4.17.1",
     "express-promise-router": "^3.0.3",
     "install": "^0.13.0",
-    "node":"10.15.0",
     "jsonwebtoken": "^8.5.1",
+    "node": "10.15.0",
     "npm": "^6.11.3",
     "pg": "^7.11.0",
-    "sequelize": "^5.10.2",
+    "sequelize": "^5.21.1",
     "sequelize-cli": "^5.5.1"
   },
   "devDependencies": {
@@ -49,6 +49,10 @@
     "mocha": "^6.2.1",
     "nodemon": "^1.19.1",
     "nyc": "^14.1.1",
-    "sinon": "^7.5.0"
+    "sinon": "^7.5.0",
+    "babel-eslint": "^10.0.3",
+    "eslint": "^6.5.1",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-import": "^2.18.2"
   }
 }
