fix heroku build

--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "",
   "main": "app.js",
   "scripts": {
+    "start": "node ./build/app.js",
     "dev": "NODE_ENV=dev nodemon --exec babel-node ./src/app.js",
     "migrate": "node_modules/.bin/sequelize db:migrate",
     "clean": "rm -rf build && mkdir build",
     "build-babel": "babel -d ./build ./src -s && babel -d ./build/config ./config -s",
     "build": "npm run clean && npm run build-babel",
+    "coverage": "nyc npm run test && nyc report --reporter=text-lcov",
     "sequelize": "dotenv sequelize",
-    "start": "NODE_ENV=dev nodemon --exec babel-node ./src/app.js",
     "test": "NODE_ENV=test nyc --reporter=lcov mocha --require @babel/register --exit"
   },
   "author": "",
@@ -21,9 +22,10 @@
     "@babel/node": "^7.6.2",
     "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/preset-env": "^7.6.2",
-    "babel-node": "0.0.1-security",
+    "@babel/register": "^7.6.2",
     "@babel/runtime": "^7.6.2",
     "@sendgrid/mail": "^6.4.0",
+    "babel-node": "0.0.1-security",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
