--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,8 @@ build/Release
 # Dependency directories
 node_modules/
 jspm_packages/
+build/
+.nyc_output/
 
 # TypeScript v1 declaration files
 typings/
